tests/rosetta/out/Rust/binary-digits.error
rustc error: exit status 1
error[E0277]: cannot calculate the remainder of `i32` divided by `String`
  --> /tmp/TestMochiToRustbinary-digits1141485888/001/prog.rs:10:38
   |
10 |             bits = format!("{}{}", x % 2.to_string(), bits);
   |                                      ^ no implementation for `i32 % String`
   |
   = help: the trait `Rem<String>` is not implemented for `i32`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&i32` implements `Rem<i32>`
             `&i32` implements `Rem`
             `i32` implements `Rem<&i32>`
             `i32` implements `Rem`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbinary-digits1141485888/001/prog.rs:10:20
   |
10 |             bits = format!("{}{}", x % 2.to_string(), bits);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiToRustbinary-digits1141485888/001/prog.rs:11:43
   |
11 |             x = ((x as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                           ^^^^^ method not found in `f64`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
